fix: waybar spacing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -140,7 +140,7 @@ window#waybar.empty #window {
     color: @textcolor1;
     border-radius: 15px;
     padding: 5px 10px 5px 10px;
-    margin: 7px 10px 10px 0px;
+    margin: 7px 0px 10px 0px;
     opacity:0.8;
     /* border:3px solid @bordercolor; */
 }
@@ -247,8 +247,8 @@ window#waybar.empty #window {
     font-size: 16px;
     color: @textcolor2;
     border-radius: 15px;
-    padding: 2px 0px 0px 0px;
-    margin: 0px 0px 3px 0px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     opacity:0.8;
 }
 
@@ -291,8 +291,8 @@ window#waybar.empty #window {
     font-size: 13px;
     color: @blacktest;
     border-radius: 15px;
-    padding: 7px 10px 4px 10px;
-    margin: 7px 10px 10px 0px;
+    padding: 5px 10px 5px 10px;
+    margin: 7px 0px 10px 0px;
     opacity:0.8;
     /* border:3px solid @blacktest; */
 }
